# shrinkr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
core/: models.py  serializers.py  test_viewset.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/storage/: __init__.py  base.py  redis.py  sqlite.py
shrinkr/: asgi.py  settings.py  urls.py  wsgi.py
